...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollviewfreecashflow">

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical" />-->

...
                android:layout_marginRight="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsCompanyNameInput"
                android:layout_width="89dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsBaseYearValue"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsCompanyNameText" />

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsBaseYearValue"
...
                android:layout_width="139dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="168dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsNumberForecastPeriodsValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsBaseYear" />

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsNumberForecastPeriodsValue"
...
                android:layout_width="142dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="109dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsBaseYearRevenueValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsNumberForecastPeriods" />

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsBaseYearRevenueValue"
...
                    android:layout_marginTop="27dp"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsBaseYearRevenue" />

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsAnnualRevenueGrowthRateValue"
                android:layout_width="89dp"
                android:layout_height="44dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="44dp"
                android:text="0.00"
                app:layout_constraintEnd_toEndOf="parent"
...
